#107.225 PL API, attachments: 'filetype' replace with 'ext'
